--- a/angular-app/src/app/components/footer/footer.component.html
+++ b/angular-app/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <section class="bg-white" xmlns="http://www.w3.org/1999/html">
-  <footer class="footer mt-20 xl:mt-32 mx-auto w-full relative text-center bg-blue-600 text-white">
+  <footer class="footer mt-20 xl:mt-32 mx-auto w-full relative text-center text-white">
     <div class="px-6 py-8 md:py-14 xl:pt-20 xl:pb-12">
-        <h2 class="font-bold text-3xl xl:text-4xl leading-snug">
+        <h2 class="font-bold text-2xl xl:text-4xl leading-snug">
             Kickstart your coding journey today!<br>Join thousands of happy fellow developers.
         </h2>
         <a class="get-started-button rounded-lg xl:mt-12 px-8 py-3 inline-block border border-transparent focus:ring-4 focus:ring-red-300 hover:opacity-90" href="/signup">
