--- a/angular-app/src/app/pages/courses/courses.component.css
+++ b/angular-app/src/app/pages/courses/courses.component.css
@@ -41,4 +41,20 @@
   font-weight: 600;
 }
 
+.card {
+  border-radius: 16px;
+}
 
+.card-course-image {
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+
+.badges {
+  margin-top: 0vw;
+  margin-bottom: 0.5vw;
+}
+
+.card-div {
+  padding-top: 1vw;
+}
