--- a/angular-app/src/app/pages/landing-page/landing-page.component.html
+++ b/angular-app/src/app/pages/landing-page/landing-page.component.html
@@ -4,12 +4,16 @@
         <div class="landing-text mr-auto place-self-center lg:col-span-7">
           <h1 class="landing-heading max-w-2xl mb-4 tracking-tight leading-none md:text-5xl xl:text-6xl">TAKE ADVANTAGE OF ONLINE LEARNING.</h1>
           <p class="landing-text text-gray-500 max-w-2xl mb-6 lg:mb-8 md:text-lg lg:text-xl">Select the optimal course to suit your learning objectives with precision and purpose.</p>
-          <a href="/signup" class="get-started-button rounded-lg inline-flex items-center justify-center px-7 py-4 mr-4 text-base font-medium text-center text-white hover:opacity-90 focus:ring-4 focus:ring-red-300">
-            Get Started
-            <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-          </a>
-          <a href="#learn-more" class="rounded-lg learn-more-button inline-flex items-center justify-center px-7 py-4 text-base focus:ring-4 focus:ring-gray-300 hover:opacity-90">
+          <a href="#learn-more" class="learn-more-button rounded-lg inline-flex items-center justify-center px-7 py-4 text-sm font-medium focus:ring-4 focus:ring-gray-300 hover:opacity-90">
             Learn More
+          </a>
+          <a class="get-started-button group relative inline-flex items-center overflow-hidden rounded-lg px-7 py-4 ml-4 text-base font-medium text-center text-white hover:opacity-90 focus:ring-4 focus:ring-red-300" href="/signup">
+            <span class="absolute -end-full transition-all group-hover:end-4">
+              <svg class="size-5 rtl:rotate-180" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
+              </svg>
+            </span>
+            <span class="get-started-button text-sm font-medium transition-all group-hover:me-4">Get Started</span>
           </a>
         </div>
         <div class="hero-image hidden lg:mt-0 lg:col-span-5 lg:flex">
@@ -44,7 +48,7 @@
 <section id="learn-more" class="bg-white">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
       <div class="text max-w-screen-md mb-8 lg:mb-16">
-          <h2 class="heading mb-4 text-4xl tracking-tight font-extrabold text-gray-900">WHAT’S IN IT FOR YOU?</h2>
+          <h2 class="heading mb-4 text-4xl tracking-tight">What’s in it for you?</h2>
           <p class="text-gray-500 sm:text-xl">Unlock the potential for growth and success with our comprehensive suite of tools and resources. Join us today and take your learning journey to new heights!</p>
       </div>
       <div class="space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
@@ -99,8 +103,8 @@
 <section class="bg-white">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
       <div class="text max-w-screen-md mb-8 lg:mb-16">
-          <h2 class="heading mb-4 text-4xl tracking-tight font-extrabold text-gray-900">FEATURED COURSES</h2>
-          <p class=" cards-text text-gray-500 sm:text-xl"> Delve into our handpicked selection of top-tier offerings, or venture into our expansive library for a wealth of learning possibilities. Your next great learning adventure awaits!</p>
+          <h2 class="heading mb-4 text-4xl tracking-tight">Featured Courses</h2>
+          <p class=" cards-text text-gray-500 sm:text-xl">Delve into our handpicked selection of top-tier offerings, or venture into our expansive library for a wealth of learning possibilities. Your next great learning adventure awaits!</p>
       </div>
       <div class="cards-grid space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
         <div class="card max-w-sm bg-white border border-gray-200 rounded-lg shadow">
@@ -114,10 +118,10 @@
               <span class="ww bg-yellow-100 text-yellow-800 text-xs font-medium me-1 px-2.5 py-0.5 rounded">javascript</span>
             </div>
               <a href="#">
-                  <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Web development basics</h5>
+                  <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900">Web development basics</h5>
               </a>
               <p class="mb-3 font-normal text-gray-700">
-                Build your first website from scratch and kickstart your journey into web development.
+                Build your first website from scratch and kickstart your journey into web dev.
               </p>
               <a href="#" class="course-button button inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:opacity-90">
                   View Course
@@ -138,7 +142,7 @@
               <span class="bg-pink-100 text-pink-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded">pycharm</span>
             </div>
               <a href="#">
-                  <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Python fundamentals</h5>
+                  <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900">Python fundamentals</h5>
               </a>
               <p class="mb-3 font-normal text-gray-700">
                 Discover the power of Python programming with hands-on exercises and projects.
@@ -162,7 +166,7 @@
                 <span class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded">matplotlib</span>
             </div>
               <a href="#">
-                  <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Machine learning basics</h5>
+                  <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900">Machine learning basics</h5>
               </a>
               <p class="mb-3 font-normal text-gray-700">
                 Unlock the potential of machine learning with this introductory course.
@@ -184,7 +188,7 @@
 <section class="bg-white">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <div class="text max-w-screen-md mb-8 lg:mb-16">
-          <h2 id="categories" class="heading mb-4 text-4xl tracking-tight font-extrabold text-gray-900">CATEGORIES</h2>
+          <h2 id="categories" class="heading mb-4 text-4xl tracking-tight">Categories</h2>
           <p class="cards-text text-gray-500 sm:text-xl"> Delve into our handpicked selection of top-tier offerings, or venture into our expansive library for a wealth of learning possibilities. Your next great learning adventure awaits!</p>
     </div>
     <div class="cards-grid space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
@@ -308,7 +312,7 @@
 <section class="bg-white">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <h2 class="heading text text-center text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">
-      Reviews from our <span class="underline underline-offset-3 decoration-8 decoration-blue-400">students.</span>
+      Reviews from our students.
     </h2>
     <div class="grid mb-8 border border-gray-200 rounded-lg shadow-sm md:mb-12 md:grid-cols-2 bg-white">
         <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e">
