--- a/angular-app/src/styles.css
+++ b/angular-app/src/styles.css
@@ -8,3 +8,15 @@ html, body {
   scroll-behavior: smooth;
 }
 
+h1, h2, h3, h4, h5, h6, dt {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+
+p, a, dd, span, label, input,  select, option, textarea {
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+button {
+  font-family: "Poppins", sans-serif;
+}
