--- a/angular-app/src/app/pages/landing-page/landing-page.component.html
+++ b/angular-app/src/app/pages/landing-page/landing-page.component.html
@@ -97,7 +97,7 @@
       </div>
       <div class="cards-grid space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0">
         <div class="card max-w-sm bg-white border border-gray-200 rounded-lg shadow">
-              <a href="#">
+              <a href="courses/python-fundamentals">
                   <img class="card-course-image card-course-image rounded-t-lg" src="../../../assets/python-fundamentals.jpg" alt="" style="width: 100%; height: 55%;"/>
               </a>
               <div class="card-div p-5">
@@ -106,13 +106,13 @@
                   <span class="ww bg-blue-100 text-blue-800 text-xs font-medium me-1 px-2.5 py-0.5 rounded">jupyter</span>
                   <span class="ww bg-yellow-100 text-yellow-800 text-xs font-medium me-1 px-2.5 py-0.5 rounded">pycharm</span>
                 </div>
-                  <a href="#">
+                  <a href="courses/python-fundamentals">
                       <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900">Python Fundamentals</h5>
                   </a>
                   <p class="mb-3 font-normal text-gray-700">
                     Discover the power of Python programming with hands-on exercises and projects.
                   </p>
-                  <a href="/courses/web-dev-basics" class="course-button button inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:opacity-90">
+                  <a href="courses/python-fundamentals" class="course-button button inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:opacity-90">
                       View Course
                        <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -145,7 +145,7 @@
               </div>
             </div>
         <div class="card max-w-sm bg-white border border-gray-200 rounded-lg shadow">
-              <a href="#">
+              <a href="courses/machine-learning-basics">
                   <img class="card-course-image rounded-t-lg" src="../../../assets/machine-learning-basics.jpg" alt="" style="width: 100%; height: 55%;"/>
               </a>
               <div class="card-div p-5">
@@ -154,13 +154,13 @@
                     <span class="ww bg-blue-100 text-blue-800 text-xs font-medium me-1 px-2.5 py-0.5 rounded">pandas</span>
                     <span class="ww bg-yellow-100 text-yellow-800 text-xs font-medium me-1 px-2.5 py-0.5 rounded">matplotlib</span>
                 </div>
-                  <a href="#">
+                  <a href="courses/machine-learning-basics">
                       <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900">Machine Learning Basics</h5>
                   </a>
                   <p class="mb-3 font-normal text-gray-700">
                     Unlock the potential of machine learning with this introductory course.
                   </p>
-                  <a href="/courses/web-dev-basics" class="course-button button inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:opacity-90">
+                  <a href="courses/machine-learning-basics" class="course-button button inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:opacity-90">
                       View Course
                        <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
